--- a/TestMdfEntityFramework/Login.xaml
+++ b/TestMdfEntityFramework/Login.xaml
@@ -331,6 +331,14 @@
                            Width="30" 
                            Source="SCS/IMG/validando_conexion.png"/>
                     <!--#endregion-->
+                    <!--#region HAY CONEXION PUERTO SERIAL -->
+                    <Image x:Name="imgHayConexionSerial" 
+                           Grid.Column="0" 
+                           HorizontalAlignment="Center"   
+                           Width="30"
+                           Margin="100,0,0,0"
+                           Source="SCS/IMG/puerto_gris.png"/>
+                    <!--#endregion-->
                     <!-- #REGION COPYRIGHT-->
                     <TextBlock Text="© 2024 Tarjetas Integrales SA de CV" Grid.Column="0" 
                                Foreground="White" HorizontalAlignment="Right" 
