se suben cambios para dejar una version que no falle con el puerto serial, ademas de la sincronizacion de usuario directamente de la tabla CT_Usuarios en la DB MULTITARIFA en el servidor de TISA

--- a/TestMdfEntityFramework/Principal.xaml
+++ b/TestMdfEntityFramework/Principal.xaml
@@ -246,7 +246,9 @@
                             Foreground="White" 
                             VerticalAlignment="Center" 
                             HorizontalAlignment="Center" 
-                            Cursor="Hand" 
+                            Cursor="Hand"
+                            IsEnabled="False"
+                            Visibility="Hidden"
                             Style="{DynamicResource BTNHEADERSTYLE}" Click="btnCuenta_Click" >
                         <Grid>
                             <Grid.ColumnDefinitions>
