--- a/TestMdfEntityFramework/Views/MiCuenta.xaml
+++ b/TestMdfEntityFramework/Views/MiCuenta.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:TestMdfEntityFramework.Views"
              mc:Ignorable="d" 
              d:DesignHeight="544" d:DesignWidth="670"
-             Background="Transparent">
+             Background="Transparent" Loaded="UserControl_Loaded" Unloaded="UserControl_Unloaded">
     <UserControl.Resources>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
